[tool.poetry]
name = "csvblend"
version = "0.1.0"
description = "Join or merge multiple CSVs."
license = "MIT"
authors = ["Raymond Wanyoike <raymond.wanyoike@gmail.com>"]
readme = "README.md"
repository = "https://github.com/rwanyoike/csvblend-python-library"
include = ["HISTORY.md"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
prospector = "^1.2.0"
pytest = "^5.3.4"
pytest-cov = "^2.8.1"
pytest-mock = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
