[tool.poetry]
name = "csvblend"
version = "0.2.0"
description = "Join or merge multiple CSVs."
authors = ["Raymond Wanyoike <raymond.wanyoike@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rwanyoike/csvblend-python-library"
documentation = "https://github.com/rwanyoike/csvblend-python-library/tree/main/docs"
packages = [{ include = "csvblend", from = "src" }]
include = ["HISTORY.md"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
